--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
     <!-- Roboto font google CDN link -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>
       UnlockDiscounts - Best Deals on Electronics, Fashion, and Banking
     </title>
