--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Inter font cdn link-->
+    <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet" />
+    <!-- satoshi font cdn link-->
     <title>
       UnlockDiscounts - Best Deals on Electronics, Fashion, and Banking
     </title>
